finish scheme concept

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <p class="about__caption">Nowoczesny sprzęt</p>
             </li>
           </ul>
-          <h2 class="about__title">o nas</h2>
+          <h2 class="about__title">o naszej firmie</h2>
           <p class="about__paragraph">
             Konstrukcje, które wykonujemy powstają przy wykorzystaniu zaawansowanego technicznie sprzętu oraz dbaniu o
             dopełnienie wszelkich obowiązujących standardów. Odpowiadamy za fachowy projekt oraz montaż w miejscu
@@ -87,12 +87,50 @@
     <div class="services" id="services">
       <div class="container">
         <div class="section">
-          <h2>zakres usług</h2>
+          <h2 class="services__title">zakres usług</h2>
+        </div>
+      </div>
+    </div>
+    <!--SPECIALIST-->
+    <div class="specialist">
+      <div class="container">
+        <div class="specialist__section section">
+          <div class="specialist__wrapper">
+            <span class="specialist__text">szukasz specjalistów?</span>
+          </div>
+          <div class="specialist__wrapper">
+            <button class="specialist__button" type="button" onclick="window.location.href='#contact'">kontakt</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--PORTFOLIO-->
+    <div class="portfolio" id="portfolio">
+      <div class="container">
+        <div class="section">
+          <h2 class="portfolio__title">realizacje</h2>
+        </div>
+      </div>
+    </div>
+    <!--CONTACT-->
+    <div class="contact" id="contact">
+      <div class="container">
+        <div class="section">
+          <h2 class="contact__title">kontakt</h2>
         </div>
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer class="footer">
+    <div class="footer__section section">
+      <a href="index.html" class="logo">
+        <svg class="logo__icon">
+          <use href="images/icons.svg#icon-logo"></use>
+        </svg>
+      </a>
+      <span class="footer__text">suchodolscy konstrukcje stalowe &copy; 2022</span>
+    </div>
+  </footer>
 </body>
 
 </html>
