add sticky headr, css color funciton

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
         </ul>
       </nav>
     </div>
-
   </header>
   <main>
     <!--SLIDER-->
     <div class="slider">
       <div class="slider__thumb">
-        <img class="slider__image" src="./images/slider-1.jpg" alt="Zdjęcie spawającego profesionalisty">
+        <img slide-item-1 class="slider__image" src="./images/slider-1.jpg" alt="Zdjęcie spawającego profesionalisty">
+        <img slide-item-2 class="slider__image fadeout" src="./images/slider-2.jpg" alt="Zdjęcie stalowej konstrukcji">
+        <img slide-item-3 class="slider__image fadeout" src="./images/slider-3.jpg" alt="Zdjęcie specjalisty w masce">
       </div>
       <div class="slider__text-wrapper">
         <h1 class="slider__title">suchodolscy</h1>
@@ -69,7 +70,7 @@
               <svg class="about__icon">
                 <use href="./images/icons.svg#icon-cpu"></use>
               </svg>
-              <p class="about__caption">Nowoczesny sprzęt</p>
+              <p class="about__caption">Nowoczesne rozwiązania</p>
             </li>
           </ul>
           <h2 class="about__title">o naszej firmie</h2>
@@ -131,6 +132,8 @@
       <span class="footer__text">suchodolscy konstrukcje stalowe &copy; 2022</span>
     </div>
   </footer>
+  <script src="./js/sticky-header.js"></script>
+  <script src="./js/faded-slider.js"></script>
 </body>
 
 </html>
