header section and about desktop version

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <div class="slider">
       <div class="slider__thumb">
         <img slide-item-1 class="slider__image" src="./images/slider-1.jpg" alt="Zdjęcie spawającego profesionalisty">
-        <img slide-item-2 class="slider__image fadeout" src="./images/slider-2.jpg" alt="Zdjęcie stalowej konstrukcji">
+        <img slide-item-2 class="slider__image fadein" src="./images/slider-2.jpg" alt="Zdjęcie stalowej konstrukcji">
         <img slide-item-3 class="slider__image fadeout" src="./images/slider-3.jpg" alt="Zdjęcie specjalisty w masce">
       </div>
       <div class="slider__text-wrapper">
         <h1 class="slider__title">suchodolscy</h1>
-        <span class="slider__dynamic-span">konstrukcje stalowe</span>
+        <span class="slider__dynamic-span" dynamic-span>konstrukcje stalowe</span>
       </div>
     </div>
     <!--ABOUT-->
@@ -74,13 +74,19 @@
             </li>
           </ul>
           <h2 class="about__title">o naszej firmie</h2>
+         <div class="about__wrapper">
+          <div class="about__thumb">
+            <img src="./images/about.jpg" alt="" class="about__image">
+          </div>
           <p class="about__paragraph">
+            <span class="about__span">Postaw na profesjonalizm</span>
             Konstrukcje, które wykonujemy powstają przy wykorzystaniu zaawansowanego technicznie sprzętu oraz dbaniu o
             dopełnienie wszelkich obowiązujących standardów. Odpowiadamy za fachowy projekt oraz montaż w miejscu
             wskazanym przez Klienta. Każdy
             obiekt, zbudowany przez naszą firmę to innowacyjna konstrukcja wyróżniająca się najwyższą trwałością i
             solidnym wykonaniem.
           </p>
+         </div>
         </div>
       </div>
     </div>
