prepare mobile header and about section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
           <li class="navigation__item"><a href="#contact" class="navigation__link">Kontakt</a></li>
         </ul>
       </nav>
+      <button class="header__menu-btn">
+        <svg class="header__icon">
+          <use href="./images/icons.svg#icon-menu"></use>
+        </svg>
+      </button>
     </div>
   </header>
   <main>
@@ -74,19 +79,19 @@
             </li>
           </ul>
           <h2 class="about__title">o naszej firmie</h2>
-         <div class="about__wrapper">
-          <div class="about__thumb">
-            <img src="./images/about.jpg" alt="" class="about__image">
+          <div class="about__wrapper">
+            <div class="about__thumb">
+              <img src="./images/about.jpg" alt="" class="about__image">
+            </div>
+            <p class="about__paragraph">
+              <span class="about__span">Postaw na profesjonalizm</span>
+              Konstrukcje, które wykonujemy powstają przy wykorzystaniu zaawansowanego technicznie sprzętu oraz dbaniu o
+              dopełnienie wszelkich obowiązujących standardów. Odpowiadamy za fachowy projekt oraz montaż w miejscu
+              wskazanym przez Klienta. Każdy
+              obiekt, zbudowany przez naszą firmę to innowacyjna konstrukcja wyróżniająca się najwyższą trwałością i
+              solidnym wykonaniem.
+            </p>
           </div>
-          <p class="about__paragraph">
-            <span class="about__span">Postaw na profesjonalizm</span>
-            Konstrukcje, które wykonujemy powstają przy wykorzystaniu zaawansowanego technicznie sprzętu oraz dbaniu o
-            dopełnienie wszelkich obowiązujących standardów. Odpowiadamy za fachowy projekt oraz montaż w miejscu
-            wskazanym przez Klienta. Każdy
-            obiekt, zbudowany przez naszą firmę to innowacyjna konstrukcja wyróżniająca się najwyższą trwałością i
-            solidnym wykonaniem.
-          </p>
-         </div>
         </div>
       </div>
     </div>
