--- a/index.html
+++ b/index.html
@@ -98,8 +98,43 @@
     <!--SERVICES-->
     <div class="services" id="services">
       <div class="container">
-        <div class="section">
-          <h2 class="services__title">zakres usług</h2>
+        <div class="services__section section">
+          <div class="services__outline-wrapper">
+            <h2 class="services__title">zakres usług</h2>
+            <ul class="services__list">
+              <li class="services__item">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-circle"></use>
+                </svg>
+                <span>konstrukcje stalowe</span>
+              </li>
+              <li class="services__item">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-circle"></use>
+                </svg>
+                <span>hale</span>
+              </li>
+              <li class="services__item">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-circle"></use>
+                </svg>
+                <span>garaże</span>
+              </li>
+              <li class="services__item">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-circle"></use>
+                </svg>
+                <span>obróbki blacharskie</span>
+              </li>
+              <li class="services__item">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-circle"></use>
+                </svg>
+                <span>obudowy z płyt warstwowych</span>
+              </li>
+            </ul>
+          </div>
+
         </div>
       </div>
     </div>
