contact section finish

--- a/index.html
+++ b/index.html
@@ -142,8 +142,15 @@
     <!--CONTACT-->
     <div class="contact" id="contact">
       <div class="container">
-        <div class="section">
+        <div class="contact__section section">
           <h2 class="contact__title">kontakt</h2>
+          <form class="contact__form">
+            <input class="contact__input" type="name" id="name" placeholder="Imię">
+            <input class="contact__input" type="email" id="email" placeholder="Email">
+            <input class="contact__input" type="phone" id="phone" placeholder="Telefon">
+            <textarea class="contact__textarea" name="message" id="message" placeholder="Wiadomość"></textarea>
+            <button class="contact__button">wyślij</button>
+          </form>
         </div>
       </div>
     </div>
