--- a/index.html
+++ b/index.html
@@ -110,22 +110,44 @@
         </div>
       </div>
     </div>
+
+
     <!--SERVICES-->
     <div class="services" id="services">
-      <div class="container">
+      <div class="services__container container">
         <div class="services__section section">
           <h2 class="services__title">zakres usług</h2>
           <ul class="services__list">
             <li class="services__item">
+              <div class="services__icon-holder">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-square"></use>
+                </svg>
+              </div>
               <span class="services__text">Konstrukcje stalowe</span>
             </li>
             <li class="services__item">
+              <div class="services__icon-holder">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-square"></use>
+                </svg>
+              </div>
               <span class="services__text">Hale i garaże</span>
             </li>
             <li class="services__item">
+              <div class="services__icon-holder">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-square"></use>
+                </svg>
+              </div>
               <span class="services__text">Obróbki blacharskie</span>
             </li>
             <li class="services__item">
+              <div class="services__icon-holder">
+                <svg class="services__icon">
+                  <use href="./images/icons.svg#icon-check-square"></use>
+                </svg>
+              </div>
               <span class="services__text">Obudowy z płyt warstwowych</span>
             </li>
           </ul>
@@ -146,6 +168,8 @@
         </div>
       </div>
     </div>
+
+
     <!--PORTFOLIO-->
     <div class="portfolio" id="portfolio">
       <div class="container">
@@ -172,7 +196,7 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="footer__section section">
+    <div class="footer__section">
       <a href="index.html" class="logo">
         <svg class="logo__icon">
           <use href="images/icons.svg#icon-logo"></use>
