--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <footer class="footer">
     <div class="footer__section">
       <a href="index.html" class="logo">
-        <svg class="logo__icon">
+        <svg class="logo__icon-bottom">
           <use href="images/icons.svg#icon-logo"></use>
         </svg>
       </a>
