--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="slider__contact-wrapper">
         <ul class="phone-mail__list">
           <li class="phone-mail__item">
-            <a href="mail:suchodolski.konstrukcje@gmail.com" class="phone-mail__link">
+            <a href="mailto:suchodolski.konstrukcje@gmail.com" class="phone-mail__link">
               <svg class="phone-mail__icon">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
@@ -214,7 +214,7 @@
       </a>
       <span class="footer__text">suchodolscy konstrukcje stalowe &copy; 2022</span>
     </div>
-    
+
   </footer>
 
   <script src="./js/sticky-header.js"></script>
